[project]
name = "diversity-de"
version = "0.1.0"
description = "GPU-accelerated Differential Evolution with Diversity Promotion using PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Joel Chacon Castillo"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.5.0",
]
